Fix shift when field goes into error

--- a/addon/styles/base.scss
+++ b/addon/styles/base.scss
@@ -266,7 +266,6 @@ $left-input-width: 250px;
   padding-bottom: 10px;
 
   .error {
-    padding-top: 3px;
     color: $frost-color-danger;
     font-size: $frost-font-xs;
   }
